--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "mint-ui": "^2.0.6",
     "node-sass": "^4.1.1",
     "sass-loader": "^4.1.1",
     "vue": "^2.1.0",
+    "vue-nprogress": "^0.1.4",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1"
   },
