--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bulma": "^0.3.0",
     "mint-ui": "^2.0.6",
-    "node-sass": "^4.1.1",
+    "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
     "vue": "^2.1.0",
     "vue-nprogress": "^0.1.4",
+    "vue-progressbar": "^0.7.0",
     "vue-resource": "^1.0.3",
-    "vue-router": "^2.1.1"
+    "vue-router": "^2.1.1",
+    "vuex": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -36,15 +39,17 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
-    "semver": "^5.3.0",
+    "node-sass": "^4.3.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
+    "sass-loader": "^4.1.1",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.0",
-    "webpack": "^1.13.2",
+    "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1"
