--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "bulma": "^0.3.0",
+    "iview": "^0.9.17",
     "mint-ui": "^2.0.6",
     "node-sass": "^4.3.0",
     "sass-loader": "^4.1.1",
     "vue": "^2.1.0",
+    "vue-bulma-expanding": "0.0.0",
     "vue-nprogress": "^0.1.4",
     "vue-progressbar": "^0.7.0",
     "vue-resource": "^1.0.3",
